Fix flex nowrap and split flex direction and wrap (#93)
* Split flex direction and wrap
* Fix `no-wrap` to `nowrap`

--- a/packages/lab/src/layout/FlexLayout/FlexLayout.css
+++ b/packages/lab/src/layout/FlexLayout/FlexLayout.css
@@ -13,7 +13,8 @@
 .uitkFlexLayout {
   gap: var(--uitkFlexLayout-gap);
   display: var(--uitkFlexLayout-layout-display);
-  flex-flow: var(--uitkFlexLayout-direction) var(--uitkFlexLayout-wrap);
+  flex-direction: var(--uitkFlexLayout-direction);
+  flex-wrap: var(--uitkFlexLayout-wrap);
   justify-content: var(--uitkFlexLayout-justify);
   align-items: var(--uitkFlexLayout-align);
   overflow: hidden;
